--- a/AppRelacionamentos-SPA/src/app/app.component.html
+++ b/AppRelacionamentos-SPA/src/app/app.component.html
@@ -1,9 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div>
   <h1>
-    Welcome to {{ title }}!
+   App Relacionamentos
   </h1>
 
   <app-value></app-value>
 </div>
-<router-outlet></router-outlet>
